creatin elements via js

--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
     <title>lista</title>
 
 <link rel="stylesheet" href="style.css">
-<script src="script.js"></script>
+<script src="script.js" defer></script>
 
 </head>
 <body>
    <h1>Your lists</h1> 
 <main>
+    <div id="add_first">
     <div class="cross one"></div>
     <div class="cross two"></div>
     <p>add a new list</p>
+    </div>
+  
 
 </main>
     
